# serenity

Base/etc/: SystemServer.ini  posixshrc  shellrc
Base/etc/WindowServer/: WindowServer.ini
Base/home/anon/.config/: Chess.ini
Meta/: bochsrc
Ports/: .port_include.sh  AvailablePorts.md
Ports/cairo/: package.sh
Ports/stockfish/: package.sh
Ports/stockfish/patches/: 0001-Remove-sanity-check-on-compiler-name-from-Makefile.patch  ReadMe.md
Ports/wayland-protocols/: package.sh
Ports/wayland-protocols/patches/: 0001-Put-pkg-config-file-in-libdir.patch  ReadMe.md
Ports/weston/: package.sh
Ports/weston/patches/: 0001-Only-build-weston-clients.patch  0002-Remove-wayland-server-dep-from-shared.patch  0003-Remove-pixman-dependency-from-shared.patch  0004-Build-without-libutil.patch  0005-Disable-pixman-clients.patch  0006-Remove-clients-that-use-libdrm.patch  0007-remove-all-egl-clients.patch  0008-remove-more-clients.patch  0009-sdafas.patch  0010-use-native-wayland-scanner.patch  ReadMe.md
Ports/xkbcommon/: package.sh
Ports/xkbcommon/patches/: 0001-use-native-wayland-scanner.patch  ReadMe.md
Userland/: CMakeLists.txt
Userland/BootLoader/: CMakeLists.txt  main.cpp
Userland/BootLoader/BootSector/: BootSector.s  CMakeLists.txt
Userland/BootLoader/stage2/: CMakeLists.txt  entry.cpp  linker.ld
Userland/Games/Chess/: main.cpp
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibC/: stdlib.cpp  stdlib.h
Userland/Libraries/LibChess/: UCIEndpoint.cpp  UCIEndpoint.h
Userland/Libraries/LibKeyring/: CMakeLists.txt  Keyring.cpp  Keyring.h
Userland/Libraries/LibWeb/: CMakeLists.txt
Userland/Libraries/LibWeb/Bindings/: NotificationConstructor.cpp  NotificationConstructor.h  NotificationObject.cpp  NotificationObject.h
Userland/Services/: CMakeLists.txt
Userland/Services/KeyServer/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  KeyClient.ipc  KeyServer.ipc  KeyringFile.cpp  KeyringFile.h  main.cpp
Userland/Services/XServer/: CMakeLists.txt  Client.cpp  Client.h  Protocol.cpp  Protocol.h  Types.cpp  Types.h  main.cpp
Userland/Utilities/: CMakeLists.txt  keyring.cpp  sed.cpp
(+3 files in other folders)
